--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 		
 		
-		<h3>Huge padding/margins</h3> <a href='faux-columns.html' class='example-link'>Example</a>
+		<h3>Huge padding/margins</h3> <a href='examples/faux-columns.html' class='example-link'>Example</a>
 		<p>Same as columns with image, but with border as a faux column. Big pagging for equal height, and negative margin to shift content back on its place.</p>
 		
 
@@ -78,7 +78,7 @@
 	</div>
 
 	<div>
-		<h2>Pseudo elements</h2> <a href='pseudo.html' class='example-link'>Example</a>
+		<h2>Pseudo elements</h2> <a href='examples/pseudo.html' class='example-link'>Example</a>
 		<p>Column backgrounds are made with empty 100%-height pseudo-elments, absolute positioned under apropriate columns.</p>
 		
 
@@ -129,7 +129,7 @@
 
 
 	<div>
-		<h2>MJT</h2> <a href='mjt.html' class='example-link'>Example</a>
+		<h2>MJT</h2> <a href='mjt.html' class='examples/example-link'>Example</a>
 		<p>Matthew James Taylor method. Floated container have height as its floated children. With aditional divs we shift columns to make columns backgrounds, and shift content back into place.</p>
 		
 
@@ -165,7 +165,7 @@
 
 
 	<div>
-		<h2>Flexboxes</h2> <a href='flexboxes.html' class='example-link'>Example</a>
+		<h2>Flexboxes</h2> <a href='examples/flexboxes.html' class='example-link'>Example</a>
 		<p>In brave new world we can use flexboxes.</p>
 		
 		
