--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
 
 	<div>
-		<h2>MJT</h2> <a href='mjt.html' class='examples/example-link'>Example</a>
+		<h2>MJT</h2> <a href='examples/mjt.html' class='example-link'>Example</a>
 		<p>Matthew James Taylor method. Floated container have height as its floated children. With aditional divs we shift columns to make columns backgrounds, and shift content back into place.</p>
 		
 
