--- a/examples/faux-columns.html
+++ b/examples/faux-columns.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <title>Faux columns</title>
 
-    <link rel="stylesheet" href="css/normalize.css" />
-<link rel="stylesheet" href="css/screen.css" />
-<link rel="stylesheet" href="css/pygments.css">
+    <link rel="stylesheet" href="../css/normalize.css" />
+<link rel="stylesheet" href="../css/screen.css" />
+<link rel="stylesheet" href="../css/pygments.css">
 
 
-		<link rel="stylesheet" href="css/faux.css">
+		<link rel="stylesheet" href="../css/faux.css">
 	
 
     <script src="js/jquery-1.9.1.min.js"></script>
