--- a/examples/flexboxes.html
+++ b/examples/flexboxes.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <title>MJT</title>
 
-    <link rel="stylesheet" href="css/normalize.css" />
-<link rel="stylesheet" href="css/screen.css" />
-<link rel="stylesheet" href="css/pygments.css">
+    <link rel="stylesheet" href="../css/normalize.css" />
+<link rel="stylesheet" href="../css/screen.css" />
+<link rel="stylesheet" href="../css/pygments.css">
 
 
-		<link rel="stylesheet" href="css/flex.css">
+		<link rel="stylesheet" href="../css/flex.css">
 	
 
     <script src="js/jquery-1.9.1.min.js"></script>
