--- a/examples/faux-columns.html
+++ b/examples/faux-columns.html
@@ -20,10 +20,10 @@
 <body>
 
 
+<h1 style="margin: 0 auto; width: 980px;">Faux Columns</h1>
 
 <div class="container">
 		
-		<h1>Faux Columns</h1>
 
 		<div class="sidebar-block">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti hic nihil harum ipsa officia reiciendis dignissimos praesentium sed explicabo facere! Est, quae, eos mollitia fugiat tempora nam quisquam repellat incidunt.</p>
