--- a/examples/pseudo.html
+++ b/examples/pseudo.html
@@ -20,10 +20,9 @@
 <body>
 
 
+<h1 style="margin: 0 auto; width: 980px;">Pseudo elements</h1>
 
 <div class="container">
-
-	<h1>Pseudo elements</h1>
 
 	<div class="sidebar-block">
 		<p>Sidebar. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti hic nihil harum ipsa officia reiciendis dignissimos praesentium sed explicabo facere! Est, quae, eos mollitia fugiat tempora nam quisquam repellat incidunt.</p>
